--- a/src/index.html
+++ b/src/index.html
@@ -294,7 +294,7 @@
           </div>
         </div>
 
-        <div class="slide slide--2 u-none">
+        <div class="slide slide--2">
           <div class="testimonial">
             <h5 class="testimonial__header">
               The last step to becoming a complete minimalist
@@ -314,7 +314,7 @@
           </div>
         </div>
 
-        <div class="slide slide--3 u-none">
+        <div class="slide slide--3">
           <div class="testimonial">
             <h5 class="testimonial__header">
               Finally free from old-school banks
