--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,10 @@
     />
 
     <link rel="stylesheet" href="./styles.css" />
+
+    <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+    <script defer src="./js/App.js"></script>
+
     <title>Bankist | When Banking meets Minimalist</title>
   </head>
   <body>
@@ -430,7 +434,6 @@
       })(window, document, 'script', 'dataLayer', 'GTM-T9Q84KH');
     </script>
     <!-- End Google Tag Manager -->
-    <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 
     <!-- Google Tag Manager (noscript) -->
     <noscript
@@ -442,7 +445,5 @@
       ></iframe
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
-
-    <script src="./js/App.js"></script>
   </body>
 </html>
