adding hammerjs for user experience

--- a/src/index.html
+++ b/src/index.html
@@ -445,5 +445,7 @@
       ></iframe
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
+
+    <script src="https://cdnjs.com/libraries/hammer.js/"></script>
   </body>
 </html>
